--- a/PDFHelper/PDFHelper.csproj
+++ b/PDFHelper/PDFHelper.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Docnet.Core" Version="2.6.0" />
     <PackageReference Include="IronPdf" Version="2025.7.17" />
     <PackageReference Include="itext" Version="9.2.0" />
+    <PackageReference Include="itext.font-asian" Version="9.2.0" />
     <PackageReference Include="PDFsharp" Version="6.2.1" />
   </ItemGroup>
 
