--- a/CommonCore/CommonCore.csproj
+++ b/CommonCore/CommonCore.csproj
@@ -7,11 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MongoDB.Driver" Version="3.4.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\CommonCore\CommonCore.csproj" />
+    <PackageReference Include="MongoDB.Bson" Version="3.4.2" />
   </ItemGroup>
 
 </Project>
