--- a/QuizManModel/QuizManModel.csproj
+++ b/QuizManModel/QuizManModel.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="MongoDB.Driver" Version="3.4.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CommonCore\CommonCore.csproj" />
+  </ItemGroup>
+
 </Project>
